# Match3Engine

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tuananh/match3engine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  match3_engine.cpp  match3_engine.h  my_jni.cpp
app/src/main/java/com/tuananh/match3engine/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tuananh/match3engine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
